--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
           >
             <!-- Email -->
             <a
-              href="mailto:vitoria.santos@email.com"
+              href="mailto:vitoria.cruz151719@gmail.com"
               class="bg-white dark:bg-slate-800 px-8 sm:px-10 py-4 sm:py-5 rounded-full shadow-lg hover:scale-105 transition-all flex items-center justify-center gap-3 text-base sm:text-lg"
             >
               <i class="fas fa-envelope text-xl text-purple-600"></i>
@@ -524,7 +524,7 @@
 
             <!-- WhatsApp -->
             <a
-              href="https://wa.me/55SEUNUMERO?text=Ol%C3%A1%20Vit%C3%B3ria%2C%20vi%20seu%20portf%C3%B3lio%20e%20gostaria%20de%20conversar%20sobre%20oportunidades%20de%20est%C3%A1gio!"
+              href="https://wa.me/559294035407"
               target="_blank"
               class="bg-white dark:bg-slate-800 px-8 sm:px-10 py-4 sm:py-5 rounded-full shadow-lg hover:scale-105 transition-all flex items-center justify-center gap-3 text-base sm:text-lg"
             >
@@ -534,7 +534,7 @@
 
             <!-- LinkedIn -->
             <a
-              href="https://www.linkedin.com/in/vitoriasantosdac"
+              href="linkedin.com/in/vitoria-cruz-12a44b281"
               target="_blank"
               class="bg-white dark:bg-slate-800 px-8 sm:px-10 py-4 sm:py-5 rounded-full shadow-lg hover:scale-105 transition-all flex items-center justify-center gap-3 text-base sm:text-lg"
             >
