Corrigindo Verificador de idade

--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
       >
         <!-- 1. Verificador de Idade -->
         <a
-          href="https://vitoriacruz79.github.io/verificadorDeIdade"
+          href="https://vitoriacruz79.github.io/VerificadorDeIdade/"
           target="_blank"
           rel="noopener noreferrer"
           class="block relative overflow-hidden rounded-2xl shadow-2xl card-hover bg-gradient-to-br from-purple-50 to-pink-50 dark:from-slate-800 dark:to-slate-900 hover:scale-[1.02] transition-transform"
